--- a/Portfolio.html
+++ b/Portfolio.html
@@ -62,10 +62,10 @@
         </div>
         <div class="carousel-item col-md-4">
           <div class="card">
-            <img class="card-img-top img-fluid" src="Annotation 2020-03-18 1619189.png" alt="Card image cap">
+            <img class="card-img-top img-fluid" src="Annotation 2020-03-19 004740.png" alt="Card image cap">
             <div class="card-body">
               <h4 class="card-title">JavaScript Quiz</h4>
-              <p class="card-text">Javascript Quiz that test the user's JavaScript knowledge</p>
+              <p class="card-text">Javascript Quiz that test the user's JavaScript knowledge. I have designed the quiz through various methods:(DOM-elements Event-listeners Functions SetInterval Local-Storage)</p>
               <a href="https://rtaylo16.github.io/Homework-Javascript-Quiz/" class="btn btn-outline-secondary" role="button">Live Site</a>
               <a href="https://github.com/Rtaylo16/Homework-Javascript-Quiz" class="btn btn-outline-primary">Github Code</a>
             </div>
