--- a/Portfolio.html
+++ b/Portfolio.html
@@ -56,7 +56,7 @@
               <h4 class="card-title">Retro City Gaming Database</h4>
               <p class="card-text">Retro City is an immersive game database that can access information on retro games. </p>
               <a href="" class="btn btn-outline-secondary" role="button">Live Site</a>
-              <a href="https://github.com/PhilipLemaster/Retro-City" class="btn btn-outline-primary">Github Code</a>
+              <a href="https://philiplemaster.github.io/Retro-City/" class="btn btn-outline-primary">Github Code</a>
             </div>
           </div>
         </div>
